--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,8 @@ add_executable(robot_news_station src/robot_news_station.cpp)
 ament_target_dependencies(robot_news_station rclcpp example_interfaces)
 add_executable(smartphone src/smartphone.cpp)
 ament_target_dependencies(smartphone rclcpp example_interfaces)
+add_executable(number_publisher src/number_publisher.cpp)
+ament_target_dependencies(number_publisher rclcpp example_interfaces)
 add_executable(number_counter src/number_counter.cpp)
 ament_target_dependencies(number_counter rclcpp example_interfaces)
 add_executable(add_two_ints_server src/add_two_ints_server.cpp)
@@ -41,6 +43,7 @@ install(TARGETS
   cpp_node
   robot_news_station
   smartphone
+  number_publisher
   number_counter
   add_two_ints_server
   add_two_ints_client_no_oop
